# backend/internal/dto/guest.go
@@ -39,3 +39,7 @@ func NewGuestListDTO(list []model.Guest) []GuestResponseDTO {
 	}
 	return out
 }
+
+func NewPaginatedGuestListDTO(list []model.Guest, total, page, pageSize int) PaginatedList[GuestResponseDTO] {
+	return NewPaginatedList(NewGuestListDTO(list), total, page, pageSize)
+}
